# bitemporal-slider

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
data/: input.csv
src/: __init__.py  bitemporal_moving_average.py  bitemporal_slider.py  main.py  reader_writer.py  sliding_window_avg.py
tests/: test_sliding_window_avg.py
