[tool.poetry]
authors = ["Abdul Mateen"]
description = "Bitemporal sliding window average algorithm"
license = "Apache-2.0"
name = "bitemporal-slider"
packages = [
  {include = "src"},
]
readme = "README.md"
version = "0.2.0"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pytest = "^7.1.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry.scripts]
bitemporal-slider = "src.main:run"
